--- a/sis.ipynb
+++ b/sis.ipynb
@@ -373,14 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f5b28c1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#API for matching name of company with their symbol\n",
     "import finnhub\n",
-    "api_key = \"d3t3huhr01qqdgfu1rngd3t3huhr01qqdgfu1ro0\"\n",
+    "import yaml\n",
+    "\n",
+    "with open(\"api_config.yaml\", \"r\") as file:\n",
+    "    config = yaml.safe_load(file)\n",
+    "\n",
+    "api_key = config.get(\"fdp_api_key\")\n",
     "finnhub_client = finnhub.Client(api_key=api_key)\n"
    ]
   },
@@ -418,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5eb3c213",
    "metadata": {},
    "outputs": [
@@ -448,10 +453,11 @@
     "import finnhub\n",
     "import pandas as pd\n",
     "import time  # for delays\n",
+    "import yaml\n",
     "\n",
-    "# Finnhub client\n",
-    "api_key = \"d3t3huhr01qqdgfu1rngd3t3huhr01qqdgfu1ro0\"\n",
-    "finnhub_client = finnhub.Client(api_key=api_key)\n",
+    "# Load API keys from config file\n",
+    "with open(\"api_config.yaml\", \"r\") as file:\n",
+    "    config = yaml.safe_load(file)\n",
     "\n",
     "final_data = []\n",
     "\n",
